--- a/src/index.css
+++ b/src/index.css
@@ -266,6 +266,20 @@ div.components {
 }
 
 /* Feed/posts */
+div.post-icon {
+  border-radius: 50%;
+  overflow: hidden;
+  width: 50px;
+  height: 50px;
+}
+
+div.post-icon img {
+  object-fit: cover;
+  height: auto;
+  width: 150px
+}
+
+
 div.feed {
   height: 100%;
   width: 100%;
@@ -372,6 +386,19 @@ div.replyPreview {
 }
 
 /* Account page */
+
+div.icon {
+  border-radius: 50%;
+  overflow: hidden;
+  height: 200px;
+  width: 200px;
+
+}
+
+div.icon img {
+  width: auto;
+  height: 100%;
+}
 
 div.accountPage {
   flex: 1;
